--- a/index.html
+++ b/index.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sponsor</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+	<meta charset="UTF-8">
+	<title>Sponsor-Page</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui" /><!--禁止缩放-->
+	<link rel="stylesheet" href="style.css">
+	<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>
+	<!-- clipboard.js 是 JS 复制文本的库 -->
+	<script src="script.js"></script>
 </head>
 <body>
-    <section id="drinks-box">
-        <section id="drinks-box-s" class="drinks-button left-100">
-            <div id="drinks-icons" class="left-100 tr3">
-                <div id="coffee-donate" class="icon-donate"><img src="images/coffee.png" alt="coffee" data-creative
-                    ="https://www.zcool.com.cn/work/ZMjQ3NTE2MA==.html"></div>
-            </div>
-            <div id="drinks-button-box" class="tr3 left-100">
-                <div id="drinks-button-bg" class="left-100"></div>
-                <div id="github-box"><a href="https://github.com/Kaiyuan/donate-page/" target="_blank">Github</a></div>
-                <ul id="donate-buttons" class="list tr3">
-                    <li id="paypal_donate"><a href="https://www.paypal.me/KaiyuanXie" target="_blank">Paypal</a></li>
-                    <li id="btc_donate" class="donate-button">Bitcoin</li>
-                    <li id="alipay_donate" class="donate-button">AliPay</li>
-                    <li id="wechat_donate" class="donate-button">WeChat</li>
-                </ul>
-            </div>
-            <div id="drinks-qrcodes" class="left-100 tr3">
-                <div id="drinks-qrcode"></div>
-            </div>
-        </section>
-    </section>
+	<a id="github" href="https://github.com/Kaiyuan/donate-page" target="_blank" class="pos-f tr3" title="Github"></a>
+	<div id="DonateText" class="tr3">Sponsor</div>
+	<ul id="donateBox" class="list pos-f tr3">
+		<li id="PayPal"><a href="https://www.paypal.me/KaiyuanXie" target="_blank">PayPal</a></li>
+		<li id="BTC" data-footnote="Copy addres and show QRCod"><button id="BTCBn"  data-clipboard-target="#btc-key" alt="Copy to clipboard">Bitcoin</button></li>
+		<li id="AliPay">AliPay</li>
+		<li id="WeChat">WeChat</li>
+	</ul>
+	<div id="QRBox" class="pos-f left-100">
+		<div id="MainBox"></div>
+	</div>
+	<!-- Bitcoin 账号 -->
+	<input id="btc-key" type="text" value="14JkMR68n4PBASB3TgvpjtaPTbfffSwFbW" readonly="readonly">
 </body>
 </html>
